fix(api)!: corrigir retorno da rota de menor preço
