# apps/backend/src/modules/api/controllers/getLowestPrice/repositories/getLowestPrice.repository.ts
@@ -1,5 +1,5 @@
 import { DatabaseService } from '@database/database.service'
-import type { GamePrice } from '@packages/types'
+import type { GamePrice, LowestPrice } from '@packages/types'
 import { sql } from 'kysely'
 import { injectable } from 'tsyringe'
 
@@ -7,16 +7,28 @@ import { injectable } from 'tsyringe'
 export class GetLowestPriceRepository {
   constructor (private readonly databaseService: DatabaseService) {}
 
-  async get (gameID: string): Promise<GamePrice | undefined> {
-    const data = await sql
+  async get (gameID: string): Promise<LowestPrice> {
+    const steamPrice = await sql
       .raw<GamePrice>(
         `SELECT * FROM game_price
           WHERE game_id = "${gameID}"
           AND steam_price = (SELECT MIN(steam_price) FROM game_price where game_id = "${gameID}")
-            OR nuuvem_price = (SELECT MIN(nuuvem_price) FROM game_price where game_id = "${gameID}")
           LIMIT 1;
         `)
       .execute(this.databaseService.getClient())
-    return data.rows.at(0)
+    const nuuvemPrice = await sql
+      .raw<GamePrice>(
+        `SELECT * FROM game_price
+          WHERE game_id = "${gameID}"
+          AND nuuvem_price = (SELECT MIN(nuuvem_price) FROM game_price where game_id = "${gameID}")
+          LIMIT 1;
+        `)
+      .execute(this.databaseService.getClient())
+
+    const data: LowestPrice = {}
+    if (steamPrice.rows.at(0) != null) data.steam = steamPrice.rows.at(0)
+    if (nuuvemPrice.rows.at(0) != null) data.nuuvem = nuuvemPrice.rows.at(0)
+
+    return data
   }
 }
